# ComfyUI_ProfilerX

./: .gitignore  README.md  __init__.py  execution_core.py  package-lock.json  package.json  prestartup.py  profiler_core.py  pyproject.toml  server.py  tsconfig.json
.github/workflows/: publish_action.yml
utilities/: ComfyUI_ExecutionTracker.py  combine_profiles.py
web/: app.d.ts  comfyui.d.ts  index.d.ts  index.ts  modules.d.ts  types.d.ts  types.ts
web/ui/: monitor.d.ts  monitor.ts  popup.d.ts  popup.ts  table.d.ts  table.ts  tabs.d.ts  tabs.ts  timerange.d.ts  timerange.ts
web/utils/: api.d.ts  api.ts  debug.ts  tabs.d.ts  tabs.ts
web/views/: analytics.d.ts  analytics.ts  history.d.ts  history.ts  latest.d.ts  latest.ts  settings.d.ts  settings.ts
